# electronics_sales_network

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
docs_eng/: README.md
products/: admin.py  models.py  paginators.py  tests.py  urls.py
products/api_views/: product.py
products/migrations/: 0001_initial.py
products/serializers/: product.py
trading_networks/: admin.py  models.py  paginators.py  permissions.py  tests.py  urls.py  validators.py
trading_networks/api_views/: network.py
trading_networks/migrations/: 0001_initial.py
trading_networks/serializers/: network.py
users/: admin.py  models.py  permissions.py  tests.py
users/api_views/: user.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/serializers/: user.py
